--- a/index.html
+++ b/index.html
@@ -9,7 +9,23 @@
 </head>
 <body>
     <!-- Header -->
-    <header></header>
+    <header>
+        <div class="container">
+            <div class="logo">
+                <img src="./img/logo.png" alt="logo">
+            </div>
+            <nav>
+                <ul>
+                    <li>FEATURES</li>
+                    <li>EDITORIALS</li>
+                    <li>ENVIROMENT</li>
+                    <li>BLOG</li>
+                    <li>SHOP</li>
+                    <li>CONTACT</li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
     <!-- Main -->
     <main></main>
