--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 <body>
     <!-- Header -->
     <header>
-        <div class="container">
-            <div class="logo">
-                <img src="./img/logo.png" alt="logo">
-            </div>
+        <div class="container_header">
+            <img src="./img/logo.png" alt="logo" id="logo">
             <nav>
                 <ul>
                     <li>FEATURES</li>
@@ -28,9 +26,21 @@
     </header>
 
     <!-- Main -->
-    <main></main>
+    <main>
+        <div class="container_main">
+            <section class="spotlight round">
+                <div class="layback round">
+                        <div class="spotlight_text">
+                            <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
+                            <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum error explicabo neque unde tempore! Culpa labore consectetur nostrum aperiam </div>
+                        </div>
+                </div>   
+            </section>
+            <section></section>
+        </div>
+    </main>
 
     <!-- Footer -->
     <footer></footer>
 </body>
-</html>
+</html>  
