--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Main -->
     <main>
         <div class="container_main">
-            <section class="spotlight round">
+            <section class="spotlight round margin">
                 <div class="layback round">
                         <div class="spotlight_text">
                             <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
@@ -36,7 +36,33 @@
                         </div>
                 </div>   
             </section>
-            <section></section>
+            <article>
+                <header>
+                    <h2>Leadership</h2>
+                    <div>Fertenum urna a libero tempus</div>
+                </header>
+                <div class="column">
+                    <div class="column_pic round" id="pic1">
+                        <div class="layback round"></div>
+                    </div>
+                    <h3>Lorem</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A eius autem in iusto corporis? Iusto repellendus ea ullam eius quod inventore in modi, ducimus beatae tempore, architecto, nihil doloribus optio?</p>
+                </div>
+                <div class="column">
+                    <div class="column_pic round" id="pic2">
+                        <div class="layback round"></div>
+                    </div>
+                    <h3>Ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A eius autem in iusto corporis? Iusto repellendus ea ullam eius quod inventore in modi, ducimus beatae tempore, architecto, nihil doloribus optio? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus pariatur quis dicta provident distinctio sed, excepturi vero libero amet sint vel necessitatibus sunt porro illo possimus quasi unde recusandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos error laborum, odit voluptate beatae repellat, assumenda, eius exercitationem ducimus iusto consequuntur corporis accusamus accusantium quibusdam! Suscipit porro sequi quae recusandae. Consectetur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem non, soluta libero ipsa vitae aliquam error repellat dolorum id, enim consequuntur iusto nemo deserunt impedit quaerat perferendis placeat possimus quia.</p>
+                </div>
+                <div class="column">
+                    <div class="column_pic round" id="pic3">
+                        <div class="layback round"></div>
+                    </div>
+                    <h3>Lorem</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A eius autem in iusto corporis? Iusto repellendus ea ullam eius quod inventore in modi, ducimus beatae tempore, architecto, nihil doloribus optio?</p>
+                </div>
+            </article>
         </div>
     </main>
 
