--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         </div>
                 </div>   
             </section>
-            <article>
+            <article class="clearfix">
                 <header>
                     <h2>Leadership</h2>
                     <div>Fertenum urna a libero tempus</div>
@@ -67,6 +67,10 @@
     </main>
 
     <!-- Footer -->
-    <footer></footer>
+    <footer>
+        <div class="container_footer">
+            Designed with <span id="heart">&hearts;</span>
+        </div>
+    </footer>
 </body>
 </html>  
