--- a/index.html
+++ b/index.html
@@ -32,30 +32,30 @@
                 <div class="layback round">
                         <div class="spotlight_text">
                             <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
-                            <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum error explicabo neque unde tempore! Culpa labore consectetur nostrum aperiam </div>
+                            <div class="subtext">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum error explicabo neque unde tempore! Culpa labore consectetur nostrum aperiam </div>
                         </div>
                 </div>   
             </section>
             <article class="clearfix">
                 <header>
                     <h2>Leadership</h2>
-                    <div>Fertenum urna a libero tempus</div>
+                    <div class="subtext">Fertenum urna a libero tempus</div>
                 </header>
-                <div class="column">
+                <div class="column margin">
                     <div class="column_pic round" id="pic1">
                         <div class="layback round"></div>
                     </div>
                     <h3>Lorem</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A eius autem in iusto corporis? Iusto repellendus ea ullam eius quod inventore in modi, ducimus beatae tempore, architecto, nihil doloribus optio?</p>
                 </div>
-                <div class="column">
+                <div class="column margin">
                     <div class="column_pic round" id="pic2">
                         <div class="layback round"></div>
                     </div>
                     <h3>Ipsum</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A eius autem in iusto corporis? Iusto repellendus ea ullam eius quod inventore in modi, ducimus beatae tempore, architecto, nihil doloribus optio? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus pariatur quis dicta provident distinctio sed, excepturi vero libero amet sint vel necessitatibus sunt porro illo possimus quasi unde recusandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos error laborum, odit voluptate beatae repellat, assumenda, eius exercitationem ducimus iusto consequuntur corporis accusamus accusantium quibusdam! Suscipit porro sequi quae recusandae. Consectetur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem non, soluta libero ipsa vitae aliquam error repellat dolorum id, enim consequuntur iusto nemo deserunt impedit quaerat perferendis placeat possimus quia.</p>
                 </div>
-                <div class="column">
+                <div class="column margin">
                     <div class="column_pic round" id="pic3">
                         <div class="layback round"></div>
                     </div>
@@ -68,7 +68,7 @@
 
     <!-- Footer -->
     <footer>
-        <div class="container_footer">
+        <div class="container_footer margin">
             Designed with <span id="heart">&hearts;</span>
         </div>
     </footer>
