--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <!-- Main -->
     <main>
         <div class="container_main">
-            <section class="spotlight round margin">
-                <div class="layback round">
+            <section class="spotlight img_round margin">
+                <div class="layback img_round">
                         <div class="spotlight_text">
                             <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
                             <div class="subtext">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum error explicabo neque unde tempore! Culpa labore consectetur nostrum aperiam </div>
@@ -42,22 +42,22 @@
                     <div class="subtext">Fertenum urna a libero tempus</div>
                 </header>
                 <div class="column margin">
-                    <div class="column_pic round" id="pic1">
-                        <div class="layback round"></div>
+                    <div class="column_pic img_round" id="pic1">
+                        <div class="layback img_round"></div>
                     </div>
                     <h3>Lorem</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A eius autem in iusto corporis? Iusto repellendus ea ullam eius quod inventore in modi, ducimus beatae tempore, architecto, nihil doloribus optio?</p>
                 </div>
                 <div class="column margin">
-                    <div class="column_pic round" id="pic2">
-                        <div class="layback round"></div>
+                    <div class="column_pic img_round" id="pic2">
+                        <div class="layback img_round"></div>
                     </div>
                     <h3>Ipsum</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A eius autem in iusto corporis? Iusto repellendus ea ullam eius quod inventore in modi, ducimus beatae tempore, architecto, nihil doloribus optio? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus pariatur quis dicta provident distinctio sed, excepturi vero libero amet sint vel necessitatibus sunt porro illo possimus quasi unde recusandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos error laborum, odit voluptate beatae repellat, assumenda, eius exercitationem ducimus iusto consequuntur corporis accusamus accusantium quibusdam! Suscipit porro sequi quae recusandae. Consectetur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem non, soluta libero ipsa vitae aliquam error repellat dolorum id, enim consequuntur iusto nemo deserunt impedit quaerat perferendis placeat possimus quia.</p>
                 </div>
                 <div class="column margin">
-                    <div class="column_pic round" id="pic3">
-                        <div class="layback round"></div>
+                    <div class="column_pic img_round" id="pic3">
+                        <div class="layback img_round"></div>
                     </div>
                     <h3>Lorem</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A eius autem in iusto corporis? Iusto repellendus ea ullam eius quod inventore in modi, ducimus beatae tempore, architecto, nihil doloribus optio?</p>
